# 2048-AI-scoring

./: .cpanel.yml  Cargo.toml  README.md  package-lock.json  player_moves_20250731_233122.csv  player_sessions.csv  player_sessions_202507.json
deploy/: .htaccess  README.md  analytics.html  api.php  index.html  package-lock.json  package.json  server.js  start-server.bat  start-server.sh
deploy/data/: game_moves_20250801_162156_oej58.csv  game_moves_20250802_143629_w22zx.csv  game_moves_20250802_155229_gsay8.csv  game_session_20250801_162156_oej58.json  game_session_20250802_143629_w22zx.json  game_session_20250802_155229_gsay8.json  player_sessions.csv
deploy/js/: analytics.js  application.js  data_logger.js  game_manager.js  timer_manager.js
deploy/style/: main.css
src/: analysis.rs  lib.rs  main.rs  player_data.rs
